# Web3D

./: .env  .gitignore  LEARN.md  README.md  index.html  main.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Chatai/: .env  index.html  package-lock.json  package.json  vite.config.ts
Chatai-Server/: main.py
Chatai-Server/Config/: config.py
Chatai-Server/Data/: cache_manager.py  chat_data.db  db_manager.py  key.py
Chatai-Server/Model/: key.py  modelapi.py
Chatai-Server/Server/: server.py
Chatai-Server/Sql/: run.mysql  run.sql
Chatai/src/: App.vue  main.ts
Chatai/src/api/: api.ts  request.ts
Chatai/src/component/: chatcontainer.vue  chatrolecontainer.vue  config.vue  leftmenu.vue  login.vue
Chatai/src/shared/: markdown.ts  util.ts
Chatai/src/store/: store.ts
Chatai/src/style/: public.css
Css/: 3dtoos.css
LanguageModel/Work/: stage1_from_scratch_language_model_plan.md
LanguageModel/data/processed/: corpus.txt  dataset_manifest.json  test.txt  train.txt  valid.txt
LanguageModel/data/raw/: synthetic_zh_qa.txt
LanguageModel/data/raw/synthetic_qa/: synthetic_zh_qa_seed.json  zh_programming_qa_expansion.json  zh_qa_generated_3000.json
LanguageModel/data/tokenized/char_v1/: test_ids.pt  tokenized_manifest.json  valid_ids.pt
LanguageModel/data/tokenizer/char_v1/: summary.json  tokenizer.json
LanguageModel/scripts/: build_char_v1_tokenizer.py  chat_stage1_gpt.py  convert_external_corpus.py  generate_stage1_zh_qa_3000.py  prepare_stage1_dataset.py  tokenize_char_v1_splits.py  train_stage1_gpt.py
LanguageModel/src/lm/: __init__.py  inference.py  model.py  tokenized_data.py  tokenizer.py  tokenizer_builder.py  training.py
LanguageModel/tests/: test_char_tokenizer.py  test_dataset.py  test_inference.py  test_model.py  test_prepare_stage1_dataset.py  test_tokenized_data.py  test_tokenizer_builder.py  test_train_stage1_gpt_cli.py  test_training.py
LanguageModelPlus/test/: usemodel.py
Script/: const.js  temp.js
Script/Geomety/: camera.js  colormap.js  data.js  lightcontrol.js  linemodel.js  model.js  planemodel.js  sence.js
Script/Gl/: glwindow.js
Script/Math/: algorithm.js
Script/Script/: strshader.js
Script/Shader/: shader.js
Script/Util/: util.js
Web3D/: .env  .gitignore  README.md
Web3D/LanguageModel/data/processed/: test.txt
Web3D/LanguageModel/data/raw/synthetic_qa/: zh_dialogue_qa_generated_6000.json
Web3D/LanguageModel/data/tokenized/char_v1/: valid_ids.pt
Web3D/LanguageModel/data/tokenizer/char_v1/: tokenizer.json
Web3D/LanguageModel/scripts/: generate_stage1_dialogue_zh_qa_6000.py  prepare_stage1_dataset.py
Web3D/LanguageModel/src/lm/: dataset.py
Web3D/LanguageModel/tests/: test_convert_external_corpus.py  test_train_stage1_gpt_cli.py
Web3D/LanguageModelPlus/test/: usemodel.py
Web3D/backend/: mvnw
Web3D/backend/src/main/resources/db/: deeplr.sql
Web3D/native/: CMakeLists.txt
Web3D/native/Package/lib/Debug/: opencv_core490d.lib  opencv_imgcodecs490d.lib
Web3D/native/Package/lib/Release/: PocoFoundation.lib  PocoNet.lib  opencv_imgcodecs490.lib  opencv_imgproc490.lib
Web3D/native/Work/: cnn.md
Web3D/native/src/: log.cpp  main.cpp  model.md
Web3D/native/src/Neural/: conv2d.h  ctcloss.cpp  flatten.cpp  layer.cpp  linear.h  maxpool.h  sample.h  sequencelinear.cpp
Web3D/show3d/: model.js
Web3D/src/api/: websocket.ts
YOLO/work/: mini_yolo_from_scratch_plan.md
backend/: README.md  mvnw.cmd  pom.xml
backend/src/main/java/com/deeplr/: MainApplication.java
backend/src/main/java/com/deeplr/common/: ApiResponse.java  GlobalExceptionHandler.java
backend/src/main/java/com/deeplr/config/: CorsConfig.java  DatabaseInitializer.java  StaticResourceConfig.java
backend/src/main/java/com/deeplr/controller/: DeeplrGrayImageController.java
backend/src/main/java/com/deeplr/dataset/: DatasetStorageProperties.java  DatasetStorageService.java  SyntheticDigitDatasetService.java  SyntheticDigitGenerateRequest.java  SyntheticDigitGenerateResult.java
backend/src/main/java/com/deeplr/entity/: GrayImage.java
backend/src/main/java/com/deeplr/mapper/: GrayImageMapper.java
backend/src/main/java/com/deeplr/service/: GrayImageService.java
backend/src/main/java/com/yueshaopu/web3d/: Web3dBackendApplication.java
backend/src/main/java/com/yueshaopu/web3d/api/: DatasetController.java  HealthController.java
backend/src/main/java/com/yueshaopu/web3d/dataset/: DatasetStorageProperties.java  DatasetStorageService.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/: deeplr.sql
backend/src/main/resources/mapper/: GrayImageMapper.xml
backend/src/test/java/com/deeplr/: DeeplrApplicationTests.java
backend/src/test/java/com/deeplr/dataset/: SyntheticDigitDatasetServiceTests.java
backend/src/test/java/com/yueshaopu/web3d/: Web3dBackendApplicationTests.java
native/: CMakeLists.txt
native/Package/lib/Debug/: PocoFoundationd.lib  PocoNetd.lib  opencv_imgproc490d.lib
native/Package/lib/Release/: opencv_core490.lib
native/Work/: ai_learning_roadmap.md  crnn.md
native/data/: ocr_charset.txt
native/examples/: sandbox.cpp
native/include/web3d/: web3d_native.hpp
native/src/: crnn.md  data.h  define.h  log.cpp  log.h  main.cpp  web3d_native.cpp
native/src/Neural/: bilstm.cpp  bilstm.h  conv2d.cpp  conv2d.h  ctcloss.h  featuretosequence.cpp  featuretosequence.h  flatten.cpp  flatten.h  heightpool.cpp  heightpool.h  layer.cpp  layer.h  linear.cpp  linear.h  loss.cpp  loss.h  math.h  maxpool.cpp  maxpool.h  neural.cpp  neural.h  relu.cpp  relu.h  sample.cpp  sample.h  sequencelinear.h  softmax.cpp  softmax.h  tensor.cpp  tensor.h
native/src/Web/: webprocess.cpp  webprocess.h  websocket.cpp  websocket.h
show3d/: main.js  model.js  window3d.js
src/: App.vue  data.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: grayImageapi.ts  request.ts  webprocess.ts  websocket.ts
src/component/: samplecountdialog.vue
src/module/: grayImage.vue
tools/: generate_gray_digits.py
